tests/neg/named-tuple-apply.check
-- Error: tests/neg/named-tuple-apply.scala:5:2 ------------------------------------------------------------------------
5 |  (apply = () => 1)(())  // error // error
  |  ^^^^^^^^^^^^^^^^^
  |  Named tuples that define an `apply` field do not allow field selection.
  |  The `apply` field should be renamed to something else.
-- [E007] Type Mismatch Error: tests/neg/named-tuple-apply.scala:5:20 --------------------------------------------------
5 |  (apply = () => 1)(())  // error // error
  |                    ^^
  |                    Found:    Unit
  |                    Required: Int
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/named-tuple-apply.scala:6:29 -----------------------------------------------------------------------
6 |  (apply = () => 1, foo = 2).foo  // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  Named tuples that define an `apply` field do not allow field selection.
  |  The `apply` field should be renamed to something else.
-- Error: tests/neg/named-tuple-apply.scala:7:29 -----------------------------------------------------------------------
7 |  (apply = () => 1, foo = 2).apply(1)  // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  Named tuples that define an `apply` field do not allow field selection.
  |  The `apply` field should be renamed to something else.
-- [E050] Type Error: tests/neg/named-tuple-apply.scala:10:2 -----------------------------------------------------------
10 |  foo() // error (error message could be better)
   |  ^^^
   |  method apply in class Foo does not take parameters
   |
   | longer explanation available when compiling with `-explain`
